--- a/src/styles/createPost.css
+++ b/src/styles/createPost.css
@@ -20,25 +20,30 @@
   height: 40%;
   width: 40%;
   background-color: rgba(255, 255, 255, 0);
-
+  transition: all 100ms ease-in-out;
   font-size: 1em;
 }
 
 .newPostUploadButtonCont:hover {
   cursor: pointer;
   font-size: 1.05em;
+  border: 2px dashed rgb(181, 181, 181);
 }
 
 .newPostPreview {
-  height: 40%;
+  min-height: 40%;
+  max-height: 70%;
+  overflow: hidden;
   width: 40%;
-  background-color: rgb(51, 45, 71);
+  background-color: rgb(255, 255, 255);
+}
+
+.newPostPreview > img {
+  max-width: 100%;
 }
 
 .createPostDescInput {
   width: 40%;
   border: 1px solid gray;
   height: 10%;
-
-  align-content: flex-start;
 }
