--- a/src/styles/profile.css
+++ b/src/styles/profile.css
@@ -7,7 +7,8 @@
 .profileDescCont,
 .profileDescTitles,
 .profileDescText,
-.profileContentCont {
+.profileContentCont,
+.profilePrevPic {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -92,12 +93,16 @@
 }
 
 .profilePrevPic {
-  background-color: red;
+  background-color: rgb(224, 224, 224);
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
+  color: rgb(255, 255, 255);
+  font-size: 2rem;
+  align-items: center;
+  text-align: center;
   width: 300px;
   height: 300px;
 }
