--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -205,7 +205,8 @@
 .feedSuggestsCont,
 .feedSuggestsUserCont,
 .feedSuggestsList,
-.feedSuggestsUserImg {
+.feedSuggestsUserImg,
+.feedSuggestsNamesCont {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -233,7 +234,7 @@
 
 .feedSuggestsUserCont {
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100%;
   flex-wrap: nowrap;
   gap: 10px;
@@ -242,6 +243,8 @@
 .feedSuggestsUserImg {
   width: 50px;
   height: 50px;
+  min-width: 50px;
+  min-height: 50px;
   overflow: hidden;
   border-radius: 50px;
 
@@ -250,6 +253,18 @@
   background-size: cover;
 }
 
-.feedSuggestsGap {
-  width: 30%;
+.feedSuggestsNamesCont {
+  flex-direction: column;
+  justify-content: flex-start;
+  width: fit-content;
+
+  flex-grow: 1;
+}
+
+.feedSuggestsNamesCont > p {
+  width: 100%;
+}
+
+.feedSuggestsButton {
+  width: 20%;
 }
