--- a/src/styles/feed.css
+++ b/src/styles/feed.css
@@ -12,11 +12,12 @@
   align-items: flex-start;
   height: 100%;
   max-width: 100%;
+
   overflow-x: hidden;
 }
 
 .feedLPad {
-  width: 20%;
+  width: 25%;
   height: 100%;
 }
 
@@ -24,7 +25,7 @@
   justify-content: flex-start;
   flex-wrap: nowrap;
   gap: 10px;
-  width: 35%;
+  width: 30%;
   height: 100%;
 
   padding: 10px 0px 10px 0px;
@@ -32,7 +33,7 @@
 
 .feedRPad {
   height: 100%;
-  width: 20%;
+  width: 25%;
 }
 
 /* feed content*/
@@ -44,7 +45,9 @@
 .feedContentDescCont,
 .feedContentComment,
 .feedContentCommentsCont,
-.feedContentAddCommentCont {
+.feedContentAddCommentCont,
+.feedContentCommentTop,
+.feedContentCommentLikes {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -71,7 +74,7 @@
 
 .feedContentUpperCont > div:nth-child(2) {
   /* user name upper div */
-  width: 90%;
+  flex-grow: 1;
 
   height: 50%;
   padding-left: 10px;
@@ -90,20 +93,27 @@
 }
 
 .feedContentPic {
-  min-height: 400px;
+  min-height: 500px;
 
   width: 100%;
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* if x > y then this, else reverse */
+  background-size: 100% auto;
 }
 
 .feedContentIconsCont {
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 100%;
-  gap: 10px;
+
+  justify-content: flex-start;
+  width: 90%;
 }
 
 .feedContentIconsCont > div {
@@ -116,22 +126,46 @@
 
 .feedContentDescCont {
   width: 90%;
-  flex-direction: row;
   justify-content: flex-start;
-  gap: 10px;
+  align-items: flex-start;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+.feedContentCommentsCont::-webkit-scrollbar {
+  display: none;
 }
 
 .feedContentCommentsCont {
+  flex-direction: row;
   width: 90%;
-  gap: 10px;
+  flex-grow: auto;
+  max-height: 100px;
+  overflow: scroll;
+  gap: 15px;
   align-items: flex-start;
 }
 
 .feedContentComment {
   width: 100%;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
   gap: 10px;
+}
+
+.feedContentCommentTop {
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.feedContentCommentLikes {
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .feedContentDate {
@@ -217,7 +251,7 @@
 .feedSuggestsCont {
   padding: 10px;
   gap: 10px;
-  width: 25%;
+  width: 20%;
 
   flex-wrap: nowrap;
   justify-content: flex-start;
