--- a/src/styles/loginPage.css
+++ b/src/styles/loginPage.css
@@ -1,6 +1,7 @@
 .loginPageCont,
 .loginBox,
-.loginInfoCont {
+.loginInfoCont,
+#loginForm {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -29,20 +30,23 @@
   border-radius: 5px;
   width: 100%;
   height: 30%;
-  gap: 10px;
-  flex-wrap: nowrap;
 }
 
 .loginPadding {
   height: 10%;
 }
 
-.loginInfoCont > input {
+#loginForm {
+  gap: 10px;
+  flex-wrap: nowrap;
+}
+
+#loginForm > input {
   background-color: white;
   border: 1px solid lightgray;
   border-radius: 5px;
 }
 
-.loginInfoCont > button {
+#loginForm > button {
   height: 20%;
 }
