--- a/src/styles/Content.css
+++ b/src/styles/Content.css
@@ -6,7 +6,9 @@
 .contentPageAddCommentCont,
 .contentPageCommentSection,
 .contentCommentCont,
-.contentCommentText {
+.contentCommentText,
+.contentPageBox,
+.contentPageLikeCont {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -15,11 +17,17 @@
 }
 
 .contentPageCont {
-  border: 1px solid lightgray;
-  border-radius: 5px;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
+}
 
-  width: 60vw;
-  height: 80vh;
+.contentPageBox {
+  border: 1px solid lightgray;
+  border-radius: 10px;
+
+  width: 70%;
+  height: 90%;
 
   flex-direction: row;
   flex-wrap: nowrap;
@@ -31,13 +39,15 @@
   background-color: black;
   background-repeat: no-repeat;
   background-position: center;
-  /* if x > y then this, else reverse */
+
   background-size: 100% auto;
 }
 
 .contentPageSideCont {
   width: 40%;
   height: 100%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .contentPageSideTopCont {
@@ -47,25 +57,50 @@
   padding: 10px;
   gap: 10px;
 }
-
-.contentPageSideTopCont > div:nth-child(3) {
-  width: 70%;
+.contentPageNamePadding {
+  flex-grow: 1;
 }
 
-.contentPageUserPic {
+.contentDeleteIcon {
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  cursor: pointer;
+  transition: all 30ms ease-in-out;
+}
+.contentPageUserPic,
+.contentCommentIcon {
   width: 40px;
   height: 40px;
   border-radius: 50px;
   overflow: hidden;
-  border: 1px solid rgb(163, 163, 163);
-
+  background-color: var(--lightBlueGray);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  cursor: pointer;
+}
+.contentPageUserPic:hover,
+.contentCommentIcon:hover {
+  border: 2px solid var(--mainBorderColour);
+  transform: scale(1.01);
+}
+.contentPageName,
+.contentCommentDisplayName {
+  font-size: 1rem;
+  font-weight: bold;
+  color: var(--mainTextColour);
+  cursor: pointer;
+}
+.contentPageName:hover,
+.contentCommentDisplayName:hover {
+  color: var(--mainBorderColour);
 }
 
 .contentPageCommentSection {
-  height: 70%;
+  height: 75%;
   width: 100%;
   overflow-y: auto;
   justify-content: flex-start;
@@ -76,27 +111,41 @@
 }
 .contentPageBottomCont {
   width: 100%;
-  height: 20%;
-  align-items: flex-start;
-  padding: 10px;
+  height: 15%;
+  gap: 5px;
 }
 
 .contentPageIconsCont {
   width: 100%;
-  height: 70%;
-  justify-content: flex-start;
+  height: 20%;
+  padding-left: 10px;
+  justify-content: space-between;
+
   flex-direction: row;
+  font-size: 1rem;
   flex-wrap: nowrap;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.contentPageDate {
+  color: var(--subTextColour);
+}
+.contentPageLikeCont {
+  flex-direction: row;
   gap: 10px;
 }
 
-.contentPageIconsCont > div {
-  width: 65%;
+.contentPageLikeIcon {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
 }
 
 .contentPageAddCommentCont {
   width: 100%;
-
   height: 30%;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -104,11 +153,22 @@
 }
 
 .contentPageAddCommentCont > input {
-  border: 1px solid gray;
+  border: 1px solid var(--backgroundGray);
   padding-left: 10px;
-
   width: 80%;
-  height: 80%;
+  height: 70%;
+  border-radius: 5px;
+}
+
+.contentPageAddCommentCont > input:focus {
+  border: 2px solid var(--mainBorderColour);
+}
+.contentPageAddCommentCont > button {
+  font-size: 1rem;
+  cursor: pointer;
+}
+.contentPageAddCommentCont > button:hover {
+  color: var(--mainBorderColour);
 }
 
 /* comments */
@@ -118,27 +178,58 @@
   justify-content: flex-start;
   gap: 10px;
   align-items: flex-start;
-
   padding: 10px;
 }
-
-.contentCommentIcon {
-  width: 40px;
-  height: 40px;
-  border-radius: 50px;
-  overflow: hidden;
-  border: 1px solid rgb(163, 163, 163);
-  flex-grow: auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+.contentCommentMidPadding {
+  flex-grow: 1;
 }
-
 .contentCommentText {
-  width: 80%;
-  max-width: 80%;
+  width: 70%;
+  max-width: 70%;
 
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
+}
+
+.contentCommentHeart {
+  display: inline-block;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+}
+
+.commentDeleteIcon {
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  background-size: 140%;
+  cursor: pointer;
+  transition: all 30ms ease-in-out;
+}
+
+.contentCommentBottom {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  color: var(--subTextColour);
+}
+.contentCommentDate {
+  width: 80px;
+}
+.contentCommentVal {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+.contentCommentVal,
+.contentCommentBottom {
+  font-size: 0.9rem;
 }
