--- a/src/styles/createPost.css
+++ b/src/styles/createPost.css
@@ -12,13 +12,16 @@
   width: 100%;
   height: 100%;
   justify-content: flex-start;
+  padding-top: 100px;
+
+  gap: 20px;
 }
 
 .newPostUploadButtonCont {
-  border: 2px dashed gray;
+  border: 2px dashed var(--lightBlueGray);
   border-radius: 5px;
-  height: 40%;
-  width: 40%;
+  height: 450px;
+  width: 450px;
   background-color: rgba(255, 255, 255, 0);
   transition: all 100ms ease-in-out;
   font-size: 1em;
@@ -26,24 +29,55 @@
 
 .newPostUploadButtonCont:hover {
   cursor: pointer;
-  font-size: 1.05em;
-  border: 2px dashed rgb(181, 181, 181);
+  transform: scale(1.01);
+  border: 2px dashed var(--mainBorderColour);
+}
+.newPostUploadButtonCont > img {
+  width: 40px;
 }
 
 .newPostPreview {
-  min-height: 40%;
-  max-height: 70%;
+  max-width: 40%;
   overflow: hidden;
-  width: 40%;
+
+  max-height: 60%;
   background-color: rgb(255, 255, 255);
+}
+.removePreviewPost {
+  width: 30px;
 }
 
 .newPostPreview > img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 .createPostDescInput {
   width: 40%;
-  border: 1px solid gray;
+  border: 1px solid var(--lightBlueGray);
   height: 10%;
+  resize: none;
+
+  border-radius: 5px;
+  padding: 5px;
+}
+
+.createPostDescInput:hover,
+.createPostDescInput:focus {
+  border: 2px solid var(--mainBorderColour);
+}
+
+.createPostDescLength {
+  color: var(--subTextColour);
+  font-size: 1rem;
+}
+
+.createPostSubmitBtn {
+  height: 40px;
+  width: 170px;
+  font-size: 1rem;
+  color: white;
+  border-radius: 5px;
+  background-color: var(--mainButtonColour);
+  transition: all 20ms ease-in-out;
 }
