--- a/src/styles/signUp.css
+++ b/src/styles/signUp.css
@@ -8,28 +8,74 @@
   align-items: center;
 }
 
+.signUpLogo {
+  filter: brightness(0);
+  width: 450px;
+  margin-bottom: -50px;
+}
+
 .signUpPageCont {
   width: 100%;
   height: 100%;
+  padding-bottom: 200px;
 }
 
 .signUpBox {
-  width: 300px;
-  height: 200px;
-  min-height: 200px;
+  width: 350px;
+  height: 450px;
+  flex-wrap: nowrap;
+  gap: 10px;
 
-  border-radius: 5px;
-
-  background-color: gray;
-  border: 1px solid lightgray;
+  border: 1px solid var(--mainBorderColour);
+  border-radius: 10px;
 }
 #signUpForm {
   flex-wrap: nowrap;
-  gap: 20px;
+  gap: 30px;
 }
 
 #signUpForm > input {
-  border: 1px solid gray;
   background-color: white;
+  border: 1px solid lightgray;
+  height: 40px;
+  font-size: 1.2rem;
+  width: 90%;
   border-radius: 5px;
+  padding: 0px 20px 0px 20px;
+  transition: all 50ms ease-in-out;
+}
+
+#signUpForm > input:focus {
+  border: 2px solid var(--mainBorderColour);
+  transform: scale(1.02);
+}
+
+.signUpButton {
+  height: 40px;
+  width: 190px;
+  font-size: 1.2rem;
+  color: white;
+  border-radius: 5px;
+  background-color: var(--mainButtonColour);
+  transition: all 20ms ease-in-out;
+  cursor: pointer;
+}
+
+.signUpDisclaimer {
+  width: 80%;
+  color: var(--subTextColour);
+  font-size: 15px;
+  text-align: center;
+}
+
+.signUpGoBackButton {
+  font-size: 15px;
+  color: var(--mainButtonColour);
+  cursor: pointer;
+}
+
+.signUpGoBackButton:hover {
+  filter: brightness(2);
+  cursor: pointer;
+  font-weight: bold;
 }
